--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			xmlns:svg="http://www.w3.org/2000/svg" 
 			xmlns="http://www.w3.org/2000/svg" 
 			viewBox="0 0 1020 655">
-			<g id="size-control">
+			<g id="size-control" display="none">
 				<g id="maximize" transform="scale(0.5) translate(20,20)" >
 					<rect
 						rx="2"
